{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 33,
  "lineage": "8d4d9275-356d-f231-7944-ed9651c1e798",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:699463447920:network-acl/acl-0689bd9fffd93ef45",
            "default_network_acl_id": "acl-0689bd9fffd93ef45",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0689bd9fffd93ef45",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "699463447920",
            "subnet_ids": [
              "subnet-004733eb0461ed4ac",
              "subnet-00a8294f2de8040b5",
              "subnet-01bb348796b1dbf93",
              "subnet-044f847b543d780ae",
              "subnet-05e256872beb605da",
              "subnet-0a1deb1f4a90e5a08"
            ],
            "tags": {
              "Environment": "sit",
              "Name": "pre-atlantis-default",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "tags_all": {
              "Environment": "sit",
              "Name": "pre-atlantis-default",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "vpc_id": "vpc-042f648088a1973b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:699463447920:route-table/rtb-09f83d0d74e25f869",
            "default_route_table_id": "rtb-09f83d0d74e25f869",
            "id": "rtb-09f83d0d74e25f869",
            "owner_id": "699463447920",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "sit",
              "Name": "pre-atlantis-default",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "tags_all": {
              "Environment": "sit",
              "Name": "pre-atlantis-default",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-042f648088a1973b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:699463447920:security-group/sg-01b36e04cd645eaa0",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-01b36e04cd645eaa0",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "699463447920",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "sit",
              "Name": "pre-atlantis-default",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "tags_all": {
              "Environment": "sit",
              "Name": "pre-atlantis-default",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "vpc_id": "vpc-042f648088a1973b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f83d2945e9bc1617",
            "domain": "vpc",
            "id": "eipalloc-0f83d2945e9bc1617",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-79-83-179.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.79.83.179",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "sit",
              "Name": "pre-atlantis-eu-central-1a",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "tags_all": {
              "Environment": "sit",
              "Name": "pre-atlantis-eu-central-1a",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0185aa9d0c10d4652",
            "domain": "vpc",
            "id": "eipalloc-0185aa9d0c10d4652",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-35-156-88-183.eu-central-1.compute.amazonaws.com",
            "public_ip": "35.156.88.183",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "sit",
              "Name": "pre-atlantis-eu-central-1b",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "tags_all": {
              "Environment": "sit",
              "Name": "pre-atlantis-eu-central-1b",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e7263be62790a0db",
            "domain": "vpc",
            "id": "eipalloc-0e7263be62790a0db",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-18-198-139-227.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.198.139.227",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "sit",
              "Name": "pre-atlantis-eu-central-1c",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "tags_all": {
              "Environment": "sit",
              "Name": "pre-atlantis-eu-central-1c",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:699463447920:internet-gateway/igw-075b0f425d048d66f",
            "id": "igw-075b0f425d048d66f",
            "owner_id": "699463447920",
            "tags": {
              "Environment": "sit",
              "Name": "pre-atlantis",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "tags_all": {
              "Environment": "sit",
              "Name": "pre-atlantis",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "vpc_id": "vpc-042f648088a1973b5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f83d2945e9bc1617",
            "association_id": "eipassoc-0a728535172100e73",
            "connectivity_type": "public",
            "id": "nat-0cd97d4aafccf94d7",
            "network_interface_id": "eni-05d449731630e5d61",
            "private_ip": "10.0.101.78",
            "public_ip": "3.79.83.179",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00a8294f2de8040b5",
            "tags": {
              "Environment": "sit",
              "Name": "pre-atlantis-eu-central-1a",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "tags_all": {
              "Environment": "sit",
              "Name": "pre-atlantis-eu-central-1a",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0185aa9d0c10d4652",
            "association_id": "eipassoc-05de1d98253b50108",
            "connectivity_type": "public",
            "id": "nat-09f8071a4c0a0fc77",
            "network_interface_id": "eni-03ac2f1d6dc51fa84",
            "private_ip": "10.0.102.222",
            "public_ip": "35.156.88.183",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a1deb1f4a90e5a08",
            "tags": {
              "Environment": "sit",
              "Name": "pre-atlantis-eu-central-1b",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "tags_all": {
              "Environment": "sit",
              "Name": "pre-atlantis-eu-central-1b",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e7263be62790a0db",
            "association_id": "eipassoc-00c7255f481e4799d",
            "connectivity_type": "public",
            "id": "nat-01e86cf7176c34347",
            "network_interface_id": "eni-0cf0b259615b2367f",
            "private_ip": "10.0.103.157",
            "public_ip": "18.198.139.227",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-044f847b543d780ae",
            "tags": {
              "Environment": "sit",
              "Name": "pre-atlantis-eu-central-1c",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "tags_all": {
              "Environment": "sit",
              "Name": "pre-atlantis-eu-central-1c",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ac2ac075bca5ca3d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0cd97d4aafccf94d7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ac2ac075bca5ca3d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0000e79a6b41d66b81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09f8071a4c0a0fc77",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0000e79a6b41d66b8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01b42886aa2d439b11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01e86cf7176c34347",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01b42886aa2d439b1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-075b0f425d048d66f",
            "id": "r-rtb-0a8abe403b4eb9a771080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a8abe403b4eb9a77",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:699463447920:route-table/rtb-0ac2ac075bca5ca3d",
            "id": "rtb-0ac2ac075bca5ca3d",
            "owner_id": "699463447920",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "sit",
              "Name": "pre-atlantis-private-eu-central-1a",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "tags_all": {
              "Environment": "sit",
              "Name": "pre-atlantis-private-eu-central-1a",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-042f648088a1973b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:699463447920:route-table/rtb-0000e79a6b41d66b8",
            "id": "rtb-0000e79a6b41d66b8",
            "owner_id": "699463447920",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "sit",
              "Name": "pre-atlantis-private-eu-central-1b",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "tags_all": {
              "Environment": "sit",
              "Name": "pre-atlantis-private-eu-central-1b",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-042f648088a1973b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:699463447920:route-table/rtb-01b42886aa2d439b1",
            "id": "rtb-01b42886aa2d439b1",
            "owner_id": "699463447920",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "sit",
              "Name": "pre-atlantis-private-eu-central-1c",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "tags_all": {
              "Environment": "sit",
              "Name": "pre-atlantis-private-eu-central-1c",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-042f648088a1973b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:699463447920:route-table/rtb-0a8abe403b4eb9a77",
            "id": "rtb-0a8abe403b4eb9a77",
            "owner_id": "699463447920",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "sit",
              "Name": "pre-atlantis-public",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "tags_all": {
              "Environment": "sit",
              "Name": "pre-atlantis-public",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-042f648088a1973b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0758da45433b480a1",
            "route_table_id": "rtb-0ac2ac075bca5ca3d",
            "subnet_id": "subnet-01bb348796b1dbf93"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc91393aa6235a86",
            "route_table_id": "rtb-0000e79a6b41d66b8",
            "subnet_id": "subnet-05e256872beb605da"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02107a12830f62f51",
            "route_table_id": "rtb-01b42886aa2d439b1",
            "subnet_id": "subnet-004733eb0461ed4ac"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d21e0a56d1af56d3",
            "route_table_id": "rtb-0a8abe403b4eb9a77",
            "subnet_id": "subnet-00a8294f2de8040b5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b863e53dbf6bd810",
            "route_table_id": "rtb-0a8abe403b4eb9a77",
            "subnet_id": "subnet-0a1deb1f4a90e5a08"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e66bbcfd15ec8eb",
            "route_table_id": "rtb-0a8abe403b4eb9a77",
            "subnet_id": "subnet-044f847b543d780ae"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:699463447920:subnet/subnet-01bb348796b1dbf93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01bb348796b1dbf93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "699463447920",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "sit",
              "Name": "pre-atlantis-private-eu-central-1a",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "tags_all": {
              "Environment": "sit",
              "Name": "pre-atlantis-private-eu-central-1a",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "vpc_id": "vpc-042f648088a1973b5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:699463447920:subnet/subnet-05e256872beb605da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e256872beb605da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "699463447920",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "sit",
              "Name": "pre-atlantis-private-eu-central-1b",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "tags_all": {
              "Environment": "sit",
              "Name": "pre-atlantis-private-eu-central-1b",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "vpc_id": "vpc-042f648088a1973b5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:699463447920:subnet/subnet-004733eb0461ed4ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004733eb0461ed4ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "699463447920",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "sit",
              "Name": "pre-atlantis-private-eu-central-1c",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "tags_all": {
              "Environment": "sit",
              "Name": "pre-atlantis-private-eu-central-1c",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "vpc_id": "vpc-042f648088a1973b5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:699463447920:subnet/subnet-00a8294f2de8040b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a8294f2de8040b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "699463447920",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "sit",
              "Name": "pre-atlantis-public-eu-central-1a",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "tags_all": {
              "Environment": "sit",
              "Name": "pre-atlantis-public-eu-central-1a",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "vpc_id": "vpc-042f648088a1973b5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:699463447920:subnet/subnet-0a1deb1f4a90e5a08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1deb1f4a90e5a08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "699463447920",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "sit",
              "Name": "pre-atlantis-public-eu-central-1b",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "tags_all": {
              "Environment": "sit",
              "Name": "pre-atlantis-public-eu-central-1b",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "vpc_id": "vpc-042f648088a1973b5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:699463447920:subnet/subnet-044f847b543d780ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044f847b543d780ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "699463447920",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "sit",
              "Name": "pre-atlantis-public-eu-central-1c",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "tags_all": {
              "Environment": "sit",
              "Name": "pre-atlantis-public-eu-central-1c",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "vpc_id": "vpc-042f648088a1973b5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:699463447920:vpc/vpc-042f648088a1973b5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0689bd9fffd93ef45",
            "default_route_table_id": "rtb-09f83d0d74e25f869",
            "default_security_group_id": "sg-01b36e04cd645eaa0",
            "dhcp_options_id": "dopt-066606fda467efdcf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-042f648088a1973b5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09f83d0d74e25f869",
            "owner_id": "699463447920",
            "tags": {
              "Environment": "sit",
              "Name": "pre-atlantis",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            },
            "tags_all": {
              "Environment": "sit",
              "Name": "pre-atlantis",
              "Pre-atlantis": "true",
              "Terraform": "true",
              "Version": "1"
            }
          }
        }
      ]
    }
  ]
}